# STLT-Rewired

./: .gitattributes  .gitignore  AGENTS.md  REWIRED-PLAN.md  deploy.ps1  i  i.ps1  install.ps1  install.sh  plugin.json  pyproject.toml  readme.md  u  u.ps1  unlock  unlock.sh  update.ps1  update.sh
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
backend/: AGENTS.md  account.lua  acf_lock.lua  achievements.lua  api.json  api_manifest.lua  auto_update.lua  backup.lua  batch.lua  cache_tools.lua  cloud_fix.lua  config.lua  config_transfer.lua  crack_migrator.lua  custom_apis.lua  diagnostics.lua  dlc.lua  downloads.lua  events.lua  feature_parity.lua  fixes.lua  github_mirror.lua  health.lua  history.lua  http_client.lua  key_vault.lua  lua_tools.lua  main.lua  manifest_auto_updater.lua  manifesthub.lua  manifests.lua  mods.lua  opensteamtool_install.lua  platform.lua  plugin_utils.lua  profiles.lua  ryuu.lua  sentinel.lua  setup_assistant.lua  source_chain.lua  (+10 more)
deploy/: parallax-tracker.service
docs/: ACCELA_STYLE.md  ARCHITECTURE.md  CHANGELOG.md  COMPETITIVE_BASELINE.md  FORK_BRIEF.md  GEN1_GEN2_COMPARISON.md  INSTALL.md  MILLENNIUM_3_0_ERRORS.md  PRODUCTION_STACK.md  REWIRED_MANAGER_PLAN.md  ROADMAP-10.0.md  STLT-FINDINGS.md  STLT_PARITY.md  UPSTREAM_COLLABORATION.md  sigmachan.ru-bulk-redirects.csv
install/: Linux-Unlock.sh  Linux-Update.sh  Linux.sh  README.md  Windows-Update.ps1  Windows.ps1
manager/: AGENTS.md  README.md  RewiredManager.sln
monocular-parallax/: README.md  requirements.txt
public/: luatools.js
scripts/: build_be_locale.py  (+16 more)
(+120 files in other folders)
