[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monocular-parallax"
version = "0.1.0"
description = "Monocular spatial simulator via motion parallax — Linux head-tracking daemon"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "STLT-Rewired" }]
keywords = ["head-tracking", "motion-parallax", "monocular", "opentrack", "linux"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "opencv-python-headless>=4.9.0",
    "mediapipe>=0.10.14",
    "numpy>=1.26.0",
    "PySide6>=6.6.0",
    "PyOpenGL>=3.1.7",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
linux = [
    "evdev>=1.7.0",
    "python-uinput>=0.11.2",
    "python-xlib>=0.33",
]

[project.scripts]
parallax-daemon = "parallax.daemon:main"
parallax-calibrate = "parallax.gui.calibration_app:main"
parallax-x11-warp = "parallax.compositor.x11_warp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
parallax = ["py.typed"]
